--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "<add-project-description-here>",
   "scripts": {
-    "test": "NODE_ENV=test mocha --compilers js:babel-core/register test/**/*.test.js",
+    "test": "NODE_ENV=test mocha --exit --require babel-core/register --require babel-polyfill test/**/*.test.js",
     "coverage": "nyc --reporter=text --reporter=lcov npm run test",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "script": "node -r babel-core/register -r babel-polyfill ./src/App.js"
   },
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
@@ -18,6 +20,9 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "mocha": "^5.0.0",
+    "mongodb": "^3.0.8",
+    "mongojs": "^2.5.0",
+    "mongoose": "^5.0.16",
     "npm": "^5.6.0",
     "nyc": "^11.4.1",
     "sinon": "^4.1.6",
